Bridge generated model-state runtime linkage
Related: #391